--- a/dev/index.html
+++ b/dev/index.html
@@ -4,18 +4,251 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Put Web Page Title Here...</title>
-
 	<!-- *** IMPORTANT *** PUT LINKS TO GOOGLE FONTS HERE -->
 	<!-- Put Google Fonts Here -->
-
 	<!-- end Google Fonts -->
-
 	<!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
 	<link rel="stylesheet" href="styles/styles.css?cachebuster=1">
 </head>
 <body>
-<!-- Put your HTML code here... -->
-<h1>Replace Me with Your HTML Code...</h1>
+
+	<header>
+		<div>
+			<a href="">logo</a>
+
+			<nav id="main-nav">
+				<ul>
+				  <li>
+					<a href="#">Speakers</a>
+					<ul class="subnav">
+					  <li><a href="#">Features</a></li>
+					  <li><a href="#">Global</a></li>
+					  <li><a href="#">Science</a></li>
+					  <li><a href="#">Technology</a></li>
+					</ul>
+				  </li>
+				  <li>
+					<a href="#">Components</a>
+					<ul>
+						<li><a href="#">Features</a></li>
+						<li><a href="#">Global</a></li>
+						<li><a href="#">Science</a></li>
+						<li><a href="#">Technology</a></li>
+					</ul>
+				  </li>
+				  <li>
+					<a href="#">Deals</a>
+					<ul>
+						<li><a href="#">Features</a></li>
+						<li><a href="#">Global</a></li>
+						<li><a href="#">Science</a></li>
+						<li><a href="#">Technology</a></li>
+					</ul>
+				  </li>
+				  <li><a href="#">Explore</a></li>
+				  <li><a href="#">Suport</a></li>
+				  <li>
+					<ul>
+						<li><a href="#"><icon>location</icon></a></li>
+						<li><a href="#"></a><icon>Search</icon></li>
+						<li><a href="#"></a><icon>cart</icon></li>
+					</ul>
+				  </li>
+				</ul>
+			  </nav>
+		</div>
+	</header>
+
+	<main>
+		<section class="HeroBanner">
+			<div>
+				<img>image</image>
+				<div>
+					<h2 class="HeroBannerTxt">Banner Text</h2>
+					<h3 class="HeroBannerSubTxt">Sub Banner text here</h3>
+					<button class="HeroBtn">Shop Wireless Speakers</button>
+				</div>
+			</div>
+			<div>
+				<img>image</image>
+				<div>
+					<h2 class="HeroBannerTxt">Banner Text</h2>
+					<h3 class="HeroBannerSubTxt">Sub Banner text here</h3>
+					<button class="HeroBtn">Shop Wireless Speakers</button>
+				</div>
+			</div>
+			<div>
+				<img>image</image>
+				<div>
+					<h2 class="HeroBannerTxt">Banner Text</h2>
+					<h3 class="HeroBannerSubTxt">Sub Banner text here</h3>
+					<button class="HeroBtn">Shop Wireless Speakers</button>
+				</div>
+			</div>
+			<div>
+				<img>image</image>
+				<div>
+					<h2 class="HeroBannerTxt">Banner Text</h2>
+					<h3 class="HeroBannerSubTxt">Sub Banner text here</h3>
+					<button class="HeroBtn">Shop Wireless Speakers</button>
+				</div>
+			</div>
+			<div>
+				<img>image</image>
+				<div>
+					<h2 class="HeroBannerTxt">Banner Text</h2>
+					<h4 class="HeroBannerSubTxt">Sub Banner text here</h4>
+					<button class="HeroBtn">Shop Wireless Speakers</button>
+				</div>
+			</div>
+			<div>
+				<img>image</image>
+				<div>
+					<h2 class="HeroBannerTxt">Banner Text</h2>
+					<h3 class="HeroBannerSubTxt">Sub Banner text here</h3>
+					<button class="HeroBtn">Shop Wireless Speakers</button>
+				</div>
+			</div>
+		</section>
+
+		<section class="BestSellerSection">
+			<h2>Best Sellers</h2>
+
+			<div class="BestSellerItems">
+			<div>
+				<h3>A2+ Desktop Speakers</h3>
+				<img>image red speaker</image>
+				<button>Shop Now</button>
+			</div>
+			<div>
+				<h3>B1 Bluetooth Music Recorder</h3>
+				<img>image black box</image>
+				<button>Shop Now</button>
+			</div>
+			<div>
+				<h3>A5+ Wireless Speakers</h3>
+				<img>image black speakers</image>
+				<button>Shop Now</button>
+			</div>
+		</div>
+		</section>
+
+		<section class="ShopByRoomSection">
+			<h2>Shop By Room or Device</h2>
+
+			<div class="ShopByRoomItems">
+			<div>
+				<h3>With Sonos</h3>
+			</div>
+			<div>
+				<h3>With Siri</h3>
+			</div>
+			<div>
+				<h3>With A Turntable</h3>
+			</div>
+			<div>
+				<h3>Tv Room</h3>
+			</div>
+			<div>
+				<h3>Kitchen</h3>
+			</div>
+			<div>
+				<h3>Patio</h3>
+			</div>
+			<div>
+				<h3>Office</h3>
+			</div>
+			<div>
+				<h3>Bedroom</h3>
+			</div>
+			</div> <!--/ end of ShopByRoomItems -->
+		</section>
+
+		<section class="FeaturedProductsSection">
+			<div>
+				<img>image</image>
+				<div>
+					<h2 class="FeaturedProductsTxt">Product Text</h2>
+					<h3 class="FeaturedProductsSubTxt">Sub text here</h3>
+					<button class="FeaturedProductsBtn">Learn More</button>
+				</div>
+			</div>
+			<div>
+				<img>image</image>
+				<div>
+					<h2 class="FeaturedProductsTxt">Product text</h2>
+					<h3 class="FeaturedProductsSubTxt">Sub text here</h3>
+					<button class="FeaturedProductsBtn">Learn More</button>
+				</div>
+			</div>
+		</section>
+
+		<section calss="OurStorySection">
+			<div class="OurStoryDiv">
+				<h2>Our story</h2>
+				<p>Audioengine was founded with a simple goal: Build products that sound great and inspire people to listen to music every day.</p>
+				<button>Learn More</button>
+			</div>
+		</section>
+
+		<section class="InTheNewsSection">
+			<h2>In the news</h2>
+			<div class="IntheNewsItems">
+				<a href="#">Image1</a>
+				<a href="#">Image2</a>
+				<a href="#">Image3</a>
+				<a href="#">Image4</a>
+				<a href="#">Image5</a>
+			</div>
+		</section>
+
+		<section class="VideoSection">
+			<div>
+				<h2>This Is Audio Engine</h2>
+				<video width="320" height="240" controls>
+					<source src="yourvideofile.mp4" type="video/mp4">
+					<source src="yourvideofile.ogg" type="video/ogg">
+					Your browser does not support the video tag.
+			  	</video>
+			</div>
+		</section>
+
+		<section class="SocialLinks">
+			<a id="TopButton">Top</a>
+			<div class="EmailAndLinkContainer">
+				<div class="SocialLinksContainer">
+					<a href="#">Facebook</a>
+					<a href="#">Twitter</a>
+					<a href="#">Instagram</a>
+					<a href="#">Youtube</a>
+				</div>
+				<div class="EmailContainer">
+					<icon>Envelope</icon>
+					<h3><a href="#">Email Sign Up</a></h3>
+				</div>
+			</div>
+		</section>
+	</main>
+
+	<footer>
+		<a href="#">Speakers</a>
+		<a href="#">Components</a>
+		<a href="#">Refurbished</a>
+		<a href="#">Find A Store</a>
+		<a href="#">Support</a>
+		<a href="#">Explore</a>
+		<a href="#">About</a>
+		<a href="#">Contact</a>
+		<a href="#">Press</a>
+		<a href="#">Warranty</a>
+		<a href="#">Military</a>
+		<a href="#">Apps</a>
+		<a href="#">Privacy</a>
+		<a href="#">Terms</a>
+		<a href="#">Legal</a>
+		<a href="#">News</a>
+	</footer>
+
 
 
 
