--- a/dev/index.html
+++ b/dev/index.html
@@ -6,12 +6,16 @@
 	<title>Put Web Page Title Here...</title>
 	<!-- *** IMPORTANT *** PUT LINKS TO GOOGLE FONTS HERE -->
 	<!-- Put Google Fonts Here -->
+	<style>
+		@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
+	</style>
 	<!-- end Google Fonts -->
 	<!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
 	<link rel="stylesheet" href="styles/styles.css?cachebuster=1">
 </head>
 <body>
 
+<div class="wrapper">
 	<header>
 		<div>
 			<a href="">logo</a>
@@ -248,8 +252,7 @@
 		<a href="#">Legal</a>
 		<a href="#">News</a>
 	</footer>
-
-
+</div> <!--/ end of wrapper -->
 
 
 <!-- *** IMPORTANT *** If you do not require the jQuery Library then feel free to delete the next line -->
