finished footer with grid but it depends on amount of content b/c of column flow of content with column templating based on screen widths. Flexbox fix?

--- a/dev/index.html
+++ b/dev/index.html
@@ -62,7 +62,7 @@
 			  </nav>
 		</div>
 	</header>
-	
+
 	<main>
 		<section class="HeroBanner">
 			<div>
@@ -235,22 +235,24 @@
 	</main>
 
 	<footer>
-		<a href="#">Speakers</a>
-		<a href="#">Components</a>
-		<a href="#">Refurbished</a>
-		<a href="#">Find A Store</a>
-		<a href="#">Support</a>
-		<a href="#">Explore</a>
-		<a href="#">About</a>
-		<a href="#">Contact</a>
-		<a href="#">Press</a>
-		<a href="#">Warranty</a>
-		<a href="#">Military</a>
-		<a href="#">Apps</a>
-		<a href="#">Privacy</a>
-		<a href="#">Terms</a>
-		<a href="#">Legal</a>
-		<a href="#">News</a>
+		<div class="footerContainer">
+			<a href="#">Speakers</a>
+			<a href="#">Components</a>
+			<a href="#">Refurbished</a>
+			<a href="#">Find A Store</a>
+			<a href="#">Support</a>
+			<a href="#">Explore</a>
+			<a href="#">About</a>
+			<a href="#">Contact</a>
+			<a href="#">Press</a>
+			<a href="#">Warranty</a>
+			<a href="#">Military</a>
+			<a href="#">Apps</a>
+			<a href="#">Privacy</a>
+			<a href="#">Terms</a>
+			<a href="#">Legal</a>
+			<a href="#">News</a>
+		</div>
 	</footer>
 </div> <!--/ end of wrapper -->
 
