finished the links section except for enlarging the email icon and getting the fa-envelope-o icon to render

--- a/dev/index.html
+++ b/dev/index.html
@@ -227,13 +227,13 @@
 			<a id="TopButton" href="#top"><i class="fa fa-solid fa-arrow-up"></i>Top</a>
 			<div class="EmailAndLinkContainer">
 				<div class="SocialLinksContainer">
-					<a href="#"><i class="fa fa-brands fa-facebook"></i></a>
+					<a href="#"><i class="fa fa-brands fa-facebook-f"></i></a>
 					<a href="#"><i class="fa fa-brands fa-instagram"></i></a>
 					<a href="#"><i class="fa fa-brands fa-pinterest"></i></a>
 					<a href="#"><i class="fa fa-brands fa-youtube"></i></a>
 				</div>
 				<div class="EmailContainer">
-					<a href="#"><i class="fa fa-solid fa-envelope"></i>Email Sign Up</a>
+					<a href="#"><i class="fa fa-envelope"></i>Email Sign Up</a>
 				</div>
 			</div>
 		</section>
