Best sellers section is responsive

--- a/dev/index.html
+++ b/dev/index.html
@@ -119,22 +119,25 @@
 			<h2>Best Sellers</h2>
 
 			<div class="BestSellerItems">
-			<div>
-				<h3>A2+ Desktop Speakers</h3>
-				<img>image red speaker</image>
-				<button>Shop Now</button>
+
+				<article class="BestSellerItemsArticle">
+					<h3>A2+ Desktop Speakers</h3>
+					<img src="./images/best-seller-01-speaker-red.jpg" alt="2 Red Speakers on an angle"/>
+					<button>Shop Now</button>
+				</article>
+
+				<article class="BestSellerItemsArticle">
+					<h3>B1 Bluetooth Music Recorder</h3>
+					<img src="./images/best-seller-02-bluetooth-receiver.jpg" alt="Bluetooth Music Reciever" />
+					<button>Shop Now</button>
+				</article>
+				
+				<article class="BestSellerItemsArticle">
+					<h3>A5+ Wireless Speakers</h3>
+					<img src="./images/best-seller-03-speaker-black.jpg" alt="Black Speakers" />
+					<button>Shop Now</button>
+				</article>
 			</div>
-			<div>
-				<h3>B1 Bluetooth Music Recorder</h3>
-				<img>image black box</image>
-				<button>Shop Now</button>
-			</div>
-			<div>
-				<h3>A5+ Wireless Speakers</h3>
-				<img>image black speakers</image>
-				<button>Shop Now</button>
-			</div>
-		</div>
 		</section>
 
 		<section class="ShopByRoomSection">
