completed a working, albeit messy version of the mockup

--- a/dev/index.html
+++ b/dev/index.html
@@ -23,50 +23,29 @@
 
 <div class="wrapper">
 	<header>
-		<div>
-			<a href="">logo</a>
-
-			<nav id="main-nav">
-				<ul>
-				  <li>
-					<a href="#">Speakers</a>
-					<ul class="subnav">
-					  <li><a href="#">Features</a></li>
-					  <li><a href="#">Global</a></li>
-					  <li><a href="#">Science</a></li>
-					  <li><a href="#">Technology</a></li>
-					</ul>
-				  </li>
-				  <li>
-					<a href="#">Components</a>
-					<ul>
-						<li><a href="#">Features</a></li>
-						<li><a href="#">Global</a></li>
-						<li><a href="#">Science</a></li>
-						<li><a href="#">Technology</a></li>
-					</ul>
-				  </li>
-				  <li>
-					<a href="#">Deals</a>
-					<ul>
-						<li><a href="#">Features</a></li>
-						<li><a href="#">Global</a></li>
-						<li><a href="#">Science</a></li>
-						<li><a href="#">Technology</a></li>
-					</ul>
-				  </li>
-				  <li><a href="#">Explore</a></li>
-				  <li><a href="#">Suport</a></li>
-				  <li>
-					<ul>
-						<li><a href="#"><icon>location</icon></a></li>
-						<li><a href="#"></a><icon>Search</icon></li>
-						<li><a href="#"></a><icon>cart</icon></li>
-					</ul>
-				  </li>
+		<a href="#"><img src="./images/logo-audioengine.png" alt="Audio Engine logo"></a>
+		<button class="btn-burger" id="btn-burger">
+			<span class="btn-burger-content">
+				<span class="btn-burger-content-sr-only">Menu</span>
+				<span class="btn-burger-content-bar"></span>
+			</span><!-- end button-content -->
+		</button>
+		<nav id="main-nav">
+			<ul>
+				<li><a href="#">Speakers</a></li>
+				<li><a href="#">Components</a></li>
+				<li><a href="#">Deals</a></li>
+				<li><a href="#">Explore</a></li>
+				<li><a href="#">Support</a></li>
+				<li> <!--Icons-->
+				<ul class="nav-icons">
+					<li><a href="#"><i class="fa fa-solid fa-map-marker"></i></a></li>
+					<li><a href="#"><i class="fa fa-solid fa-search"></i></a></li>
+					<li><a href="#"><i class="fa fa-solid fa-shopping-cart"></i></a></li>
 				</ul>
-			  </nav>
-		</div>
+				</li> <!--end icons-->
+			</ul>
+			</nav>
 	</header>
 
 	<main>
