--- a/dev/index.html
+++ b/dev/index.html
@@ -9,6 +9,7 @@
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
 	</style>
+	<link rel="stylesheet" href="https://kit.fontawesome.com/2cb13184f1.css" crossorigin="anonymous">
 	<!-- end Google Fonts -->
 	<!-- *** IMPORTANT *** DO NOT DELETE OR EDIT THE NEXT LINE OF CODE - IT IS IMPORTANT FOR THE GULP BUILD PROCESS. SEE YOUR INSTRUCTOR FIRST IF YOU WANT TO EDIT OR DELETE THIS LINE -->
 	<link rel="stylesheet" href="styles/styles.css?cachebuster=1">
