--- a/dev/index.html
+++ b/dev/index.html
@@ -169,28 +169,27 @@
 		</section>
 
 		<section class="FeaturedProductsSection">
-			<div>
-				<img>image</image>
-				<div>
-					<h2 class="FeaturedProductsTxt">Product Text</h2>
-					<h3 class="FeaturedProductsSubTxt">Sub text here</h3>
+				<div class="allNew">
+				<div class="backgroundShade">
+					<h2 class="FeaturedProductsTxt">All New</h2>
+					<p class="FeaturedProductsSubTxt">The A5+ Wireless Speakers</p>
 					<button class="FeaturedProductsBtn">Learn More</button>
 				</div>
-			</div>
-			<div>
-				<img>image</image>
-				<div>
-					<h2 class="FeaturedProductsTxt">Product text</h2>
-					<h3 class="FeaturedProductsSubTxt">Sub text here</h3>
-					<button class="FeaturedProductsBtn">Learn More</button>
 				</div>
-			</div>
+				<div class="feelingLucky">
+					<div class="backgroundShade">
+					<h2 class="FeaturedProductsTxt">Feeling Lucky</h2>
+					<p class="FeaturedProductsSubTxt">The A5+ Wireless Speakers</p>
+					<button class="FeaturedProductsBtn">Learn More</button>
+					</div>
+				</div>
 		</section>
 
-		<section calss="OurStorySection">
+		<section class="OurStorySection">
 			<div class="OurStoryDiv">
 				<h2>Our story</h2>
-				<p>Audioengine was founded with a simple goal: Build products that sound great and inspire people to listen to music every day.</p>
+				<p>Audioengine was founded with a simple goal.</p>
+				<p id="italics">Build a speaker that sounds great, is easy to set up and use, and that makes people want to listen to music every day.</p>
 				<button>Learn More</button>
 			</div>
 		</section>
