final refactors done!

--- a/dev/index.html
+++ b/dev/index.html
@@ -115,19 +115,19 @@
 				<article class="BestSellerItemsArticle">
 					<h3>A2+ Desktop Speakers</h3>
 					<img src="./images/best-seller-01-speaker-red.jpg" alt="2 Red Speakers on an angle"/>
-					<button>Shop Now</button>
+					<button>SHOP NOW</button>
 				</article>
 
 				<article class="BestSellerItemsArticle">
 					<h3>B1 Bluetooth Music Recorder</h3>
 					<img src="./images/best-seller-02-bluetooth-receiver.jpg" alt="Bluetooth Music Reciever" />
-					<button>Shop Now</button>
+					<button>SHOP NOW</button>
 				</article>
 				
 				<article class="BestSellerItemsArticle">
 					<h3>A5+ Wireless Speakers</h3>
 					<img src="./images/best-seller-03-speaker-black.jpg" alt="Black Speakers" />
-					<button>Shop Now</button>
+					<button>SHOP NOW</button>
 				</article>
 			</div>
 		</section>
@@ -227,7 +227,7 @@
 			<div>
 				<h2>This Is Audio Engine</h2>
 				<img src="./images/bg-this-is-audio-engine-section.jpg" alt="man dancing to music">
-				<img src="./images/play.png" alt="orange play button" class="play-button button primary js-trigger-video-modal"/>
+				<img src="./images/play.svg" alt="orange play button" class="play-button button primary js-trigger-video-modal"/>
 			</div>
 		</section>
 				<section class="video-modal">
