banner refactor complete

--- a/dev/index.html
+++ b/dev/index.html
@@ -211,18 +211,18 @@
         </section>
 
         <section class="FeaturedProductsSection">
-          <div class="allNew">
-            <div class="backgroundShade">
-              <h2 class="FeaturedProductsTxt">All New</h2>
-              <p class="FeaturedProductsSubTxt">The A5+ Wireless Speakers</p>
-              <button class="FeaturedProductsBtn">Learn More</button>
+          <div class="allNew BannerItem">
+            <div class="BannerShadebox">
+              <h2 class="BannerTxt">All New</h2>
+              <p class="BannerSubTxt">The A5+ Wireless Speakers</p>
+              <button class="BannerBtn">Learn More</button>
             </div>
           </div>
-          <div class="feelingLucky">
-            <div class="backgroundShade">
-              <h2 class="FeaturedProductsTxt">Feeling Lucky</h2>
-              <p class="FeaturedProductsSubTxt">The A5+ Wireless Speakers</p>
-              <button class="FeaturedProductsBtn">Learn More</button>
+          <div class="feelingLucky BannerItem">
+            <div class="BannerShadebox">
+              <h2 class="BannerTxt">Feeling Lucky</h2>
+              <p class="BannerSubTxt">The A5+ Wireless Speakers</p>
+              <button class="BannerBtn">Learn More</button>
             </div>
           </div>
         </section>
