fixed play button

--- a/dev/index.html
+++ b/dev/index.html
@@ -299,7 +299,7 @@
               alt="man dancing to music"
             />
             <img
-              src="./images/play.png"
+              src="./images/play.svg"
               alt="orange play button"
               class="play-button button primary js-trigger-video-modal"
             />
